           writeable directory (prints a warning and keeps going on)
- [bugfix] Added XmlServerReport.aspx for compatibility with CCTray.NET >= 1.3 [Steve Donie]
- [bugfix] cruise start --daemon works with Webrick
- [bugfix] stop builder processes from going zombie by using Process#detach [Kurtis Seebaldt]
* 1.3.0
  - cruise data (build results, etc) is stored in $HOME/.cruise/ by default
  - builds can now be serialized - with a config option set, CC.rb will only run one build at a time
  - option to auto delete more than N builds
  - [experimental] plugins can be installed w/ script/cruise_plugin script
  - [bugfix] build requested status now stays on dashboard until a build starts
  - [patch] subversion external support - Nathan Wilmes
  - [patch] relative url support - Neal Clark

------------------------------------------------------------------------------------------------------------------------
* 1.2.1
  - [bugfix] fixed some windows specific things to do with running a server
  
------------------------------------------------------------------------------------------------------------------------
* 1.2.0
  - build chaining implemented w/ triggers
  - recognized NetBSD as a platform
  - some optimizations for dashboard / CCTray performance
  - data version of ./projects directory is stored, and necessary migrations are run automatically if cruise version
    number is bigger than data version
  - setting CC_BUILD_LABEL environment variable before invoking the build
  - [bugfix] no longer passing in 'production' as RAILS_ENV to rake cruise
  - [bugfix] handle Subversion URLs with spaces; generally improved escaping of special characters
             on the command line
  - [bugfix] Email notifier works with non-TLS enabled SMTP servers

------------------------------------------------------------------------------------------------------------------------
* 1.1.0
  - individual RSS feeds for each project